# Safespace_node

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  auto.crt  auto.key  camtest.py  docker-compose.yml  edit_display_gps.py  edit_gps_extras.py  edit_gps_final.py  edit_main.py  edit_output.py  main.py  requirements-gpu.txt  requirements-raspi.txt  requirements.txt
AI Layer/Notebooks/: ModelTest.ipynb  ModelsInfo.ipynb  Notebooks.md
Handlers/: Camera_Handler.py  Detection_Visuals_Handler.py  Display_Handler.py  Frame_Viewer_Handler.py  Model_Detection_Handler.py  Socket_Handler.py  Video_Input_Handler.py
Managers/: AI_Manger.py  IO_Manager.py  Network_Manager.py
configs/: ai.json  camera.json  config.yaml  display.json  logging.json  mediamtx.yml  network.json  node.json
core/: __init__.py  bus.py  display_subscriber.py  events.py  network_worker.py  protocols.py
core/stages/: __init__.py  capture.py  decision.py  inference.py
docker/: entrypoint.sh  healthcheck.py
docs/: ARCHITECTURE.md  CLASS_DIAGRAMS.md  README.md
docs/core/: main.md
docs/handlers/: camera_handler.md  detection_visuals_handler.md  display_handler.md  model_detection_handler.md  model_loader_handler.md  socket_handler.md  video_input_handler.md
docs/managers/: ai_manager.md  io_manager.md  (+1 more)
models/: best_MSamir_imx.rpk  network.rpk
safespace/: main.py
scripts/: setup-direct-link.sh
src/: edit_heartbeat.py  main.cpp  main.py  test_display.py
utils/: config.py  constants.py  failures.py  logger.py  system_monitor.py
(+136 files in other folders)
